Fixed issue with booking form not fitting the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@ hr {
   width: 100%;
   max-width: 1200px;
   padding-top:25px;
+  height: 100%;
 }
 
 .menu-list {
@@ -339,9 +340,9 @@ p.menu-list__item-desc+span.dots {
 
 .booking-section {
   padding-top: 5%;
-  padding-right: 7.5%;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .booking_list {
@@ -360,6 +361,7 @@ p.menu-list__item-desc+span.dots {
 #opening-header_menu {
     color: #657383;
     text-align: center;
+
 }
 
 .restaurant { 
